# bikeraccoon

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  avelo_bikesharebot.py  bot.credentials.sample.json  bot.sample.json  mobi_vancouver_bikesharebot.py  pyproject.toml  sample_bikesharebot.py  setup.py  setup.sh  systems.json.example
.github/workflows/: ci.yml
bikeraccoon/: __init__.py  _version.py
bikeraccoon/api/: api.py  api_functions.py  db.py
bikeraccoon/bot/: __init__.py  bot_functions.py  plots.py  weather.py
bikeraccoon/dashboard/: app.py  app.py~
bikeraccoon/dashboard/assets/: style.css
bikeraccoon/gbfs/: __init__.py  query_functions.py
bikeraccoon/templates/: admin.html  frontpage.html
bikeraccoon/tracker/: __init__.py  tracker.py  tracker_functions.py
docs/: index.rst
docs/source/: conf.py  index.rst  index.rst~
systemd/: br-api.service  br-dash.service  br-tracker.service
tests/: test_api_auth.py  test_api_functions.py  test_bot.py  test_db.py  test_get_trips.py  test_imports.py  test_live_api.py  test_tracker_cap.py  test_tracker_utils.py  test_trip_detection.py  test_utils.py
