[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bikeraccoon"
version = "2.0"
description = "Python utilities for accessing the raccoon.bike bikeshare API"
authors = [{ name = "Mike Jarrett", email = "msjarrett@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "duckdb",
    "pyarrow",
    "requests",
    "timeout-decorator",
    "flask",
    "flask-cors",
    "pytz",
    "dash",
    "plotly",
]

[project.optional-dependencies]
bot = [
    "matplotlib",
    "seaborn",
    "numpy",
    "shapely",
    "geopandas",
    "cartopy",
]

[project.urls]
Homepage = "https://raccoon.bike"

[tool.setuptools.packages.find]
include = ["bikeraccoon*"]
