[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bikeraccoon"
version = "3.0"
description = "Python utilities for tracking bike share usage"
authors = [{ name = "Mike Jarrett", email = "msjarrett@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "duckdb",
    "pyarrow",
    "requests",
    "flask",
    "flask-cors",
    "pytz",
    "dash",
    "plotly",
]

[project.optional-dependencies]
bot = [
    "matplotlib",
    "seaborn",
    "numpy",
    "shapely",
    "geopandas",
    "cartopy",
]

[project.urls]
Homepage = "https://raccoon.bike"

[tool.setuptools.packages.find]
include = ["bikeraccoon*"]
