[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bikeraccoon"
version = "3.1"
description = "Python utilities for tracking bike share usage"
authors = [{ name = "Mike Jarrett", email = "msjarrett@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "duckdb",
    "pyarrow",
    "requests",
    "flask",
    "flask-cors",
    "pytz",
    "dash",
    "plotly",
]

[project.optional-dependencies]
bot = [
    "matplotlib",
    "seaborn",
    "numpy",
    "shapely",
    "geopandas",
    "cartopy",
    "atproto>=0.0.65",
]

[project.urls]
Homepage = "https://raccoon.bike"

[tool.setuptools.packages.find]
include = ["bikeraccoon*"]

[dependency-groups]
dev = [
    "pillow>=12.1.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]
